update facial Recognition

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,6 +24,7 @@
             android:layout_height="wrap_content"
             android:text="@string/login_create_account"
             android:fontFamily="@font/kanit_regular"
+            android:textColorLink="@color/black"
             android:textColor="@color/black"
             android:textSize="@dimen/_14ssp"
             android:layout_marginTop="@dimen/_12sdp"/>
