--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,6 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
     <com.trust.home.security.widgets.UserToolBar
+        android:id="@+id/toolbar"
         android:layout_marginTop="@dimen/_12sdp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
