--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="color_D9D9D9">#D9D9D9</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="color_0000005">#0D000000</color>
+    <color name="color_81C349">#81C349</color>
+    <color name="red">#BE3E57</color>
 </resources>
