Update profile screen, edit screen and logic save database

--- a/app/src/main/res/layout/fragment_profile_view.xml
+++ b/app/src/main/res/layout/fragment_profile_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -9,42 +10,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <com.trust.home.security.widgets.AppToolBar
+        android:id="@+id/toolbar"
+        app:atb_title="Profile"
+        app:atb_visible_end_icon="true"
         app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/tvProfileName"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Profile"
-        android:layout_marginTop="@dimen/_12sdp"
-        android:fontFamily="@font/kanit_regular"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_18ssp"
-        android:layout_marginHorizontal="@dimen/_12sdp"
-        android:gravity="center_horizontal"/>
+        android:layout_height="wrap_content"/>
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imAvatar"
         android:layout_width="@dimen/_80sdp"
         android:layout_height="@dimen/_80sdp"
         android:src="@drawable/ic_default_avatar"
-        app:layout_constraintTop_toBottomOf="@+id/tvProfileName"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="@dimen/_24sdp"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvName"
-        android:layout_marginTop="@dimen/_12sdp"
+        android:layout_marginTop="@dimen/_6sdp"
         app:layout_constraintTop_toBottomOf="@+id/imAvatar"
         tools:text="Mark Zuckerberg"
         android:fontFamily="@font/kanit_medium"
-        android:textSize="@dimen/_13sdp"
+        android:textSize="@dimen/_15sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvInfo"
         app:layout_constraintTop_toBottomOf="@+id/tvName"
         tools:text="Male, 39"
         android:fontFamily="@font/kanit_regular"
@@ -53,6 +50,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvHome"
+        app:layout_constraintTop_toBottomOf="@+id/tvInfo"
+        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
+        android:layout_marginVertical="@dimen/_8sdp"
+        tools:listitem="@layout/item_profile"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/btnLogout"
