--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,5 +2,16 @@
 <resources>
     <declare-styleable name="AppToolBar">
         <attr name="atb_title" format="string"/>
+        <attr name="atb_visible_end_icon" format="boolean"/>
+    </declare-styleable>
+
+    <declare-styleable name="InputField">
+        <attr name="if_title" format="string"/>
+        <attr name="if_hint" format="string"/>
+        <attr name="if_inputType" format="enum">
+            <enum name="text" value="0"/>
+            <enum name="singleNumber" value="1"/>
+        </attr>
+        <attr name="if_maxLength" format="integer"/>
     </declare-styleable>
 </resources>
