--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,8 @@
     <color name="transparent">#00FFFFFF</color>
     <color name="color_0000005">#0D000000</color>
     <color name="color_81C349">#81C349</color>
+    <color name="color_179E7C">#179E7C</color>
     <color name="red">#BE3E57</color>
+    <color name="item_selected">#DE0F37</color>
+    <color name="item_unselected">#686868</color>
 </resources>
