--- a/app/src/main/res/layout/fragment_login_with_face_id.xml
+++ b/app/src/main/res/layout/fragment_login_with_face_id.xml
@@ -22,4 +22,21 @@
         app:layout_constraintDimensionRatio="h, 1:1"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/btnLogout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Logout"
+        android:textColor="@color/red"
+        android:fontFamily="@font/kanit_regular"
+        android:backgroundTint="#33A4A4A4"
+        android:backgroundTintMode="add"
+        android:paddingHorizontal="@dimen/_40sdp"
+        android:paddingVertical="@dimen/_10sdp"
+        android:background="@drawable/bg_logout"
+        android:layout_marginBottom="@dimen/_16sdp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
